objects/ASI_eForm_Leave_Request__c.object
<CustomObject>
    <description>Leave Request</description>
    <fields>
        <fullName>ASI_eForm_LR_Maternity_Leave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maternity Leave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_LR_Sick_Leave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sick Leave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Leave_of_Absence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leave of Absence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Opt_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opt Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leave_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Opt_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opt Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leave_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Opt_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opt Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leave_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Opt_MC_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opt MC Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leave_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Company__c</fullName>
        <description>Requester Company</description>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_Employee_Company_Name_MDM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Department__c</fullName>
        <description>Requester Department</description>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_MDM_Department__c</formula>
        <label>Requester Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_ID__c</fullName>
        <description>Requester ID</description>
        <formula>ASI_eForm_Requester_Record__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Name__c</fullName>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_Employee_First_Name__c +&apos; &apos;+&apos; &apos;+  ASI_eForm_Requester_Record__r.ASI_eForm_Employee_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester ID</label>
        <referenceTo>ASI_eForm_HR_MDM__c</referenceTo>
        <relationshipLabel>Leave Requests</relationshipLabel>
        <relationshipName>Leave_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requester_Title__c</fullName>
        <formula>ASI_eForm_Requester_Record__r.ASI_eForm_Employee_Job_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting for Finance Verification</fullName>
                </value>
                <value>
                    <fullName>Finance Verified</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Summary_Date_Leave_From__c</fullName>
        <description>Date (From)</description>
        <label>Leave Date (From)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Summary_Date_To__c</fullName>
        <description>Leave Date (To)</description>
        <label>Leave Date (To)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Total_Days__c</fullName>
        <label>Total no. of days</label>
        <summarizedField>ASI_eForm_Leave_Request_Line_Item__c.ASI_eForm_No_of_Days__c</summarizedField>
        <summaryForeignKey>ASI_eForm_Leave_Request_Line_Item__c.ASI_eForm_Leave_Reuest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Annual_Leave__c</fullName>
        <label>Sum of Annual Leave</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Leave Request</label>
    <listViews>
        <fullName>ASI_eHR_KOR_LR_Approved</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Total_Days__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_eForm_Leave_of_Absence__c</columns>
        <columns>ASI_eForm_LR_Maternity_Leave__c</columns>
        <columns>ASI_eForm_LR_Sick_Leave__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Leave_Request__c.ASI_eForm_KR_Leave_Request</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>eHR_KOR_LR_Approved</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eHR_KOR_LR_Rejected</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Total_Days__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_eForm_Leave_of_Absence__c</columns>
        <columns>ASI_eForm_LR_Maternity_Leave__c</columns>
        <columns>ASI_eForm_LR_Sick_Leave__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Leave_Request__c.ASI_eForm_KR_Leave_Request</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>eHR_KOR_LR_Rejected</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_eHR_KOR_LR_Submitted</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Total_Days__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_eForm_Leave_of_Absence__c</columns>
        <columns>ASI_eForm_LR_Maternity_Leave__c</columns>
        <columns>ASI_eForm_LR_Sick_Leave__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Leave_Request__c.ASI_eForm_KR_Leave_Request</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>eHR_KOR_LR_Submitted</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Total_Days__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_eForm_Leave_of_Absence__c</columns>
        <columns>ASI_eForm_LR_Maternity_Leave__c</columns>
        <columns>ASI_eForm_LR_Sick_Leave__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Leave</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_eForm_Total_Days__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_Leave_of_Absence__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Leave</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>eHR_KOR_LR_Draft</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Requester_Department__c</columns>
        <columns>ASI_eForm_Requester_Name__c</columns>
        <columns>ASI_eForm_Requester_Record__c</columns>
        <columns>ASI_eForm_Total_Days__c</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ASI_eForm_Leave_of_Absence__c</columns>
        <columns>ASI_eForm_LR_Maternity_Leave__c</columns>
        <columns>ASI_eForm_LR_Sick_Leave__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_eForm_Leave_Request__c.ASI_eForm_KR_Leave_Request</value>
        </filters>
        <filters>
            <field>ASI_eForm_Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>eHR_KOR_LR_Draft</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>LR-{000000}</displayFormat>
        <label>Leave Request Ref No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Requests</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_KR_Leave_Request</fullName>
        <active>true</active>
        <label>KR Leave Request</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>